syntax = "proto3";
package gov.hhs.aspr.ms.gcm.taskit.protobuf.plugins;

option java_multiple_files = true;
option java_package = "gov.hhs.aspr.ms.gcm.taskit.protobuf.plugins.regions.reports.input";

import "plugins/regions/support.proto";
import "plugins/reports/support.proto";


message RegionPropertyReportPluginDataInput {
    ReportLabelInput reportLabel = 1;
    ReportPeriodInput reportPeriod = 2;
    repeated RegionPropertyIdInput includedProperties = 3;
    repeated RegionPropertyIdInput excludedProperties = 4;
    bool defaultInclusionPolicy = 5;
}

message RegionTransferReportPluginDataInput {
    ReportLabelInput reportLabel = 1;
    ReportPeriodInput reportPeriod = 2;
}